--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.5",
+    "@tailwindcss/forms": "^0.5.7",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.41"
   }
