--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hotwired/turbo-rails": "^8.0.5",
     "@tailwindcss/forms": "^0.5.7",
     "autoprefixer": "^10.4.20",
+    "lodash": "^4.17.21",
     "postcss": "^8.4.41"
   }
 }
