--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -17,7 +17,8 @@ servers:
 # Set ssl: false if using something like Cloudflare to terminate SSL (but keep host!).
 proxy:
   ssl: true
-  host: tailwind-rails.castle104.com
+  host: "tailwind-rails.castle104.com"
+  app_port: 3000
 
 # Credentials for your image host.
 registry:
@@ -41,8 +42,6 @@ builder:
 #   secret:
 #     - RAILS_MASTER_KEY
 env:
-  clear:
-    RAILS_LOG_TO_STDOUT: true
   secret:
     - RAILS_MASTER_KEY
 # Aliases are triggered with "bin/kamal <alias>". You can overwrite arguments on invocation:
@@ -59,7 +58,7 @@ ssh:
 # Use a persistent storage volume.
 #
 volumes:
-  - "app_storage:/app/storage"
+  - "tailwind_rails_storage:/app/storage"
 
 # Bridge fingerprinted assets, like JS and CSS, between versions to avoid
 # hitting 404 on in-flight requests. Combines all files from new and old
