--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -58,13 +58,13 @@ ssh:
 # Use a persistent storage volume.
 #
 volumes:
-  - "tailwind_rails_storage:/app/storage"
+  - "tailwind_rails_storage:/rails/storage"
 
 # Bridge fingerprinted assets, like JS and CSS, between versions to avoid
 # hitting 404 on in-flight requests. Combines all files from new and old
 # version inside the asset_path.
 #
-# asset_path: /app/public/assets
+asset_path: "/rails/public/assets"
 
 # Configure rolling deploys by setting a wait time between batches of restarts.
 #
