--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@tailwindcss/forms": "^0.5.7",
     "autoprefixer": "^10.4.20",
     "lodash": "^4.17.21",
-    "postcss": "^8.4.41"
+    "postcss": "^8.4.41",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0"
   }
 }
