--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "lodash": "^4.17.21",
     "postcss": "^8.4.41",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.27.0"
+    "react-dom": "^18.3.1"
   }
 }
