use AI generated images and text

--- a/test/fixtures/features.yml
+++ b/test/fixtures/features.yml
@@ -1,79 +1,79 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-halekulani_topic1:
-  tagline: 天国の名にもっともふさわしい楽園へ
+manareaserina_topic1:
+  tagline: 最も天国らしい楽園へと誘う場所
   description:
-    ハワイの言葉で「天国にふさわしい館」を意味するハレクラニは、ワイキキビーチで100年以上にわたる歴史を重ね、世代を超えて多くのお客さまに愛されてきたホテルブランドです。その2つめのホテルとなるハレクラニ沖縄は、沖縄海岸国定公園として守られてきた恩納村の優雅な海辺で、新たな時代のラグジュアリーをご提供します。
+    南国の言葉で「天国の家」を意味するマナレアは、サンセットビーチで1世紀以上にわたる伝統を築き、世代を超えて多くの方々に愛されてきたホテルブランドです。その2つ目の施設となるマナレアセリーナは、青々とした自然に囲まれたミラージュ岬の静かな海辺で、新時代のラグジュアリーな体験をお届けします。
   category: topic
-  image_path: a_tpc01_190909.jpg.webp
+  image_path: a_tpc01_190909.webp
   position: 1
-  hotel: halekulani
+  hotel: manareaserina
 
-halekulani_topic2:
-  tagline: すべての客室がオーシャンビュー
+manareaserina_topic2:
+  tagline: 全ての部屋から美しい海の景色を楽しむことができます
   description:
-    ハレクラニ沖縄では、ご滞在するすべてのお客様にオーシャンビューと沖縄の自然を満喫できる客室をご用意しております。<br>
-    全室50平米以上の白を基調としたリラックスした空間と、心地よい時間を過ごせるテラス付き。<br>
-    ハレクラニのアイデンティティである「Seven Shades of White（7色の白）」のコンセプトを
-    受け継ぎ、優美な白に満たされた滞在空間は、窓の外に広がる青く美しい世界をいっそう鮮やかに映し出します。
+    マナレアセリーナでは、全てのお部屋から広がる海の絶景をご堪能いただける、贅沢な空間をお届けします。<br>
+    客室はゆとりのある45平米以上の広さを誇り、白を基調としたインテリアが爽やかな雰囲気を演出。テラスからは、この地ならではの自然美を存分に楽しむことができます。<br>
+    白い巨塔をテーマにデザインされた室内は、海の青とのコントラストが際立ち、滞在中のリラックスしたひとときをさらに特別なものにします。
   category: topic
-  image_path: a_tp_01_240808.jpg.webp
+  image_path: a_tp_01_240808.webp
   position: 2
-  hotel: halekulani
+  hotel: manareaserina
 
-halekulani_topic3:
-  tagline: 美しい空間デザイン
+manareaserina_topic3:
+  tagline: 洗練された空間設計
   description:
-    リゾート内のあらゆる空間が、「ハレクラニ」の世界観をそのまま体現しています。陽気な楽園ムードに心が華やぐオールデイダイニング、落ち着きと風格を醸すステーキ＆ワイン、ドラマティックなサンセットを満喫するバーなど、それぞれインテリアの趣は異なりますが、どの空間においても「優雅なおもてなし」を体感いただけるハレクラニスピリットが息づいています。
+    リゾート内のすべての空間が、「マナレア」の世界観を余すところなく表現しています。温かいハワイの風を感じさせるハワイアンレストランでは、伝統的な料理とモダンなアレンジが調和した味わいを楽しめます。落ち着いた雰囲気の中で本格的なハワイアンステーキや厳選されたワインを味わえる空間、そして、目の前に広がる夕陽と波音を楽しみながらカクテルを味わえるトロピカルバーなど、それぞれがハワイの魅力を余すところなく感じられるデザインでお客様をお迎えします。どの空間にも共通するのは「心地よいハワイアンホスピタリティ」。マナレアスピリットとして、訪れる人々に特別なひとときを届けます。
   category: topic
-  image_path: a_tp_02_240808.jpg.webp
+  image_path: a_tp_02_240808.webp
   position: 3
-  hotel: halekulani
+  hotel: manareaserina
 
-halekulani_topic4:
-  tagline: スタッフの心からのホスピタリティ
+manareaserina_topic4:
+  tagline: スタッフの真心こもったおもてなし
   description:
-    ハレクラニ沖縄で過ごすラグジュアリーな1日。この奇跡の楽園においては、あらゆるシーンに特別な時間が流れています。<br>
-    ヴァカンス、ハネムーン、一人旅などお越しになる目的はさまざまでも、一貫して変わらないのは、スタッフの心からのホスピタリティ。ハレクラニの伝統的なおもてなしを大切にしながら、パーソナルでプロフェッショナルなサービスを体感いただけます。ハレクラニに愛着をもち、誇りと情熱を心に抱いて、お客さまをお迎えします。
+    マナレアセリーナで過ごす特別なひととき。この楽園では、訪れるすべての瞬間が贅沢で心温まる時間に彩られています。
+    リラクゼーションを求める滞在、特別な記念日、一人での静かな時間など、どのような目的で訪れても、変わらないのはスタッフによる細やかな心遣いと洗練されたサービスです。マナレアの伝統的なホスピタリティを基盤にしながら、お客様一人ひとりに寄り添い、温かみのあるおもてなしをお届けします。自然の美しさに包まれたこの場所で、心に残る思い出をご提供いたします。
   category: topic
-  image_path: a_tp_03a_220622.jpg.webp
+  image_path: a_tp_03a_220622.webp
   position: 4
-  hotel: halekulani
+  hotel: manareaserina
 
-halekulani_room1:
+manareaserina_room1:
   tagline: VILLAS
   description:
-    青い海が間近に広がるクリフトップには、プライベートプール(温水)と天然温泉を備えた5棟のヴィラがございます。<br>
-    頂点の贅沢を満喫しながら、まるで我が家のようなくつろぎを感じていただけます。
+    エメラルドブルーの海を一望できるクリフトップには、極上のプライベート空間を提供する5棟のラグジュアリーヴィラが佇んでいます。
+    各ヴィラには、四季を通じて利用できる温水プールと、海のエネルギーを感じられる天然温泉を完備。まるで楽園に隠れ家を持ったかのような感覚で、静寂と贅沢を独占できます。ここでは時間がゆったりと流れ、非日常と心からの癒しを同時に体験していただけます。
   category: room
-  image_path: b_ss1_02_240808.jpg.webp
+  image_path: b_ss1_02_240808.webp
   position: 1
-  hotel: halekulani
+  hotel: manareaserina
 
-halekulani_room2:
+manareaserina_room2:
   tagline: SUITES
   description:
-    絶佳の眺望を誇る広さ76平米のエグゼクティブオーシャン スイートから、贅沢の頂点を極めたペントハウスタイプのプライベートプールも備えた広さ294㎡のオーキッド スイートまで、まさに天国にふさわしい滞在をご提供します。
+    果てしなく広がる海を一望できる、ゆとりある30㎡のエグゼクティブオーシャンスイートから、息を呑むような贅沢が詰まった500㎡のオーキッドスイートまで、夢のような空間をご用意しました。
+    オーキッドスイートでは、専用のプライベートプールと広々としたテラスで、極上のリラクゼーションを楽しむことができます。一瞬一瞬が特別になる、この上ない贅沢なひとときをお届けし、まるで天国にいるかのような体験をお約束します。
   category: room
-  image_path: b_ss2_01_240808.jpg.webp
+  image_path: b_ss2_01_240808.webp
   position: 2
-  hotel: halekulani
+  hotel: manareaserina
 
-halekulani_room3:
+manareaserina_room3:
   tagline: STANDARD ROOMS
   description:
-    新たなラグジュアリーのスタンダードとなるテラス付き広さ50平米のゲストルームは、ビーチフロントウイング、サンセットウイングに7つのタイプをご用意しました。お客さまの求める滞在スタイルに合わせて、お選びいただけます。
+    革新的なラグジュアリー体験をお届けする、広さ70平米以上のテラス付きゲストルームを、オーシャンビューウイングとトロピカルウイングに10種類ご用意しました。それぞれの部屋は、開放感溢れる設計と洗練されたインテリアで、自然と調和した優雅な空間を演出。滞在の目的や気分に合わせて、理想のひとときをお選びいただけます。
   category: room
-  image_path: b_ss3_01_240808.jpg.webp
+  image_path: b_ss3_01_240808.webp
   position: 3
-  hotel: halekulani
+  hotel: manareaserina
 
-halekulani_room4:
+manareaserina_room4:
   tagline: CLUB LOUNGE
   description:
-    サンセットウィング5階には、クラブラウンジをご用意しました。プレミアクラブオーシャンフロント、ヴィラにご宿泊のお客さまが、ご利用いただけます。クラブラウンジレセプションには専任スタッフが常駐し、快適な滞在のお手伝いをいたします。<br>
-    心地よいテラス席も設けたラウンジ内では、終日シャンパンサービスをご堪能いただけます。また、朝食をお召し上がりいただけるほか、アフタヌーンティーやカクテルなどをご自由にお楽しみください。
+    リゾートの象徴とも言えるパノラマウイング最上階には、広々としたエクスクルーシブラウンジをご用意しました。オーシャンビューグランドスイートやプライベートヴィラにご宿泊のお客様限定でご利用いただける特別な空間です。
+    ラウンジの専任コンシェルジュが常駐し、滞在中のあらゆるリクエストにお応えします。さらに、広大なテラス席からは、水平線に沈む壮大な夕陽を眺めながら、終日お楽しみいただけるプレミアムシャンパンサービスを提供。朝食には地元の旬の食材を使用した特別メニューをご用意し、昼間にはエレガントなアフタヌーンティー、夜にはシグネチャーカクテルをお楽しみいただけます。特別なお客様のためだけに設計された、この贅沢なラウンジで、極上のひとときをお過ごしください。
   category: room
-  image_path: b_ss4_01_240808.jpg.webp
+  image_path: b_ss4_01_240808.webp
   position: 4
-  hotel: halekulani
+  hotel: manareaserina
