--- a/test/fixtures/hotels.yml
+++ b/test/fixtures/hotels.yml
@@ -1,17 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-halekulani:
-  name: ハレクラニ沖縄
-  prefecture: 沖縄県
-  city: 恩納村
-  tagline: ハワイで100年以上続く「ハレクラニ」の世界2軒目となるホテル
+manareaserina:
+  name: マナレアセリーナ
+  prefecture: サンセットビーチ
+  city: ミラージュ岬
+  tagline: 100年の伝統を受け継ぐ、マナレアセリーナの新たな世界へ
   description:
-    ハレクラニ沖縄は、世界一流のホテルやレストラン、スパの格付けを行う「フォーブス・トラベルガイド2024」の「スパ部門」において、スパハレクラニが初めて最高評価の5つ星スパに認定されました。また、「ホテル部門」においては、3年連続で5つ星を獲得いたしました。<br>
-    5周年を迎える2024年の記念の年に、世界的評価の高い「フォーブス・トラベルガイド」で、沖縄で唯一「スパ」「ホテル」両部門で5つ星に選ばれたことは大変光栄です。今後もこの評価を維持し、ハレクラニ沖縄をご愛顧くださるゲストの皆さまの声やご要望に真摯にお応えし、皆さまに選ばれるホテルであり続けるよう、尽力してまいります。
-
-two:
-  name: MyString
-  prefecture: MyString
-  city: MyString
-  tagline: MyString
-  description: MyText
+    マナレアセリーナは、2025年、「グローバルラグジュアリーアワード」にて、その革新的なサービスと地域文化との調和が評価され、特別賞を受賞しました。この賞では、「独自性のある体験の提供」や「環境に配慮したラグジュアリー」が高く評価されています。<br>
+    新たな年を迎え、マナレアセリーナでは、地域の魅力を活かした特別なプログラムやサステナブルな取り組みをさらに拡大。滞在するだけでなく、心に残る感動と学びのある体験をご提供いたします。<br>
+    今回の受賞を励みに、これからもゲスト一人ひとりの期待を超えるサービスを追求し、世界中の旅行者に「また訪れたい」と思っていただける唯一無二のリゾートであり続けるよう努めてまいります。
