--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "^10.4.20",
     "lodash": "^4.17.21",
     "postcss": "^8.4.41",
+    "preact": "^10.25.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   }
