--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.5",
     "@tailwindcss/forms": "^0.5.7",
