--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hotwired/turbo-rails": "^8.0.5",
     "@tailwindcss/forms": "^0.5.7",
     "autoprefixer": "^10.4.20",
+    "chart.js": "^4.4.6",
     "lodash": "^4.17.21",
     "postcss": "^8.4.41",
     "react": "^18.3.1",
