--- a/test/fixtures/tasks.yml
+++ b/test/fixtures/tasks.yml
@@ -1,6 +1,6 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-todo1:
+todo_1:
   user: sazae
   name: First Todo
   description: Description for First Todo
