--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "tailwindcss": "^3.4.10"
   },
   "scripts": {
-    "build": "esbuild app/javascript/*.* --bundle --splitting --chunk-names=[name]-[hash].digested --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets --loader:.jpg=file --loader:.webp=file --asset-names=[name]-[hash].digested",
+    "build": "esbuild app/javascript/*.* --bundle --splitting --chunk-names=[name]-[hash].digested --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets --loader:.jpg=file --loader:.webp=file --loader:.png=file --asset-names=[name]-[hash].digested",
     "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css"
   },
   "dependencies": {
