--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.5",
     "@tailwindcss/forms": "^0.5.7",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.20",
     "chart.js": "^4.4.6",
     "lodash": "^4.17.21",
