--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.5",
     "@tailwindcss/forms": "^0.5.7",
@@ -18,6 +19,7 @@
     "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.20",
     "chart.js": "^4.4.6",
+    "clsx": "^2.1.1",
     "lodash": "^4.17.21",
     "postcss": "^8.4.41",
     "react": "^18.3.1",
